# CS479_P2

./: CMakeLists.txt  README.md
Common/: CMakeLists.txt  ReadImage.cpp  gauss.h  image.h
Experiment3/: main.cpp  main.h  threshold_vs_accuracy_1804289383
Report/: report.tex
